--- a/index.html
+++ b/index.html
@@ -1896,7 +1896,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Por quê?</a><a
               href="#docs"
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Exemplos</a><a
-              href="https://github.com/lucodifier/dashund" target="_blank" rel="noopener noreferrer"
+              href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">GitHub</a><a
               href="#start"
               class="bg-gradient-to-r from-primary-600 to-accent-600 hover:from-primary-700 hover:to-accent-700 text-white px-6 py-2 rounded-lg transition-all duration-300 font-semibold shadow-md hover:shadow-lg transform hover:-translate-y-0.5">Começar</a>
@@ -1936,7 +1936,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                       class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                    </svg>Começar Agora</a><a href="https://github.com/lucodifier/dashund" target="_blank"
+                    </svg>Começar Agora</a><a href="https://github.com/lucodifier/dachshund" target="_blank"
                     rel="noopener noreferrer"
                     class="inline-flex items-center justify-center border-2 border-orange-600 text-orange-600 hover:bg-orange-600 hover:text-white font-bold py-4 px-8 rounded-lg transition-all duration-300"><svg
                       class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
@@ -2276,7 +2276,7 @@ vercel --prod
                 <div class="text-6xl mb-4">🚀</div>
                 <h3 class="text-2xl font-bold text-gray-900 mb-4">Mais Templates em Breve</h3>
                 <p class="text-gray-600 mb-6">Estamos trabalhando em mais templates incríveis:</p>
-                <ul class="space-y-2 text-gray-700 text-left"></ul><a href="https://github.com/lucodifier/dashund" target="_blank" rel="noopener noreferrer"
+                <ul class="space-y-2 text-gray-700 text-left"></ul><a href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
                   class="mt-6 text-primary-600 hover:text-primary-700 font-semibold inline-flex items-center">Contribua
                   no GitHub<svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -2445,7 +2445,7 @@ vercel --prod
                   <p class="text-orange-100">Instale o Dachshund e crie sites incríveis com SEO perfeito</p>
                 </div>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center"><a
-                    href="https://github.com/lucodifier/dashund" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
                     class="bg-white text-primary-600 hover:bg-gray-100 font-bold py-4 px-8 rounded-lg transition-all duration-300 shadow-lg hover:shadow-xl inline-flex items-center justify-center"><svg
                       class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                       <path
@@ -2462,19 +2462,19 @@ vercel --prod
               </div>
             </div>
             <div class="mt-12 flex flex-wrap justify-center gap-6 text-sm"><a
-                href="https://github.com/lucodifier/dashund" target="_blank" rel="noopener noreferrer"
+                href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
                 class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
                   fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
                   </path>
-                </svg>Documentação</a><a href="https://github.com/lucodifier/dashund/issues" target="_blank"
+                </svg>Documentação</a><a href="https://github.com/lucodifier/dachshund/issues" target="_blank"
                 rel="noopener noreferrer"
                 class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
                   fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                </svg>Issues</a><a href="https://github.com/lucodifier/dashund/discussions" target="_blank"
+                </svg>Issues</a><a href="https://github.com/lucodifier/dachshund/discussions" target="_blank"
                 rel="noopener noreferrer"
                 class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
                   fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -2512,11 +2512,11 @@ vercel --prod
             <div>
               <h4 class="font-bold mb-4 text-primary-500">Recursos</h4>
               <ul class="space-y-2 text-gray-400 text-sm">
-                <li><a href="https://github.com/lucodifier/dashund" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
                     class="hover:text-white transition-colors">Documentação</a></li>
-                <li><a href="https://github.com/lucodifier/dashund/issues" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://github.com/lucodifier/dachshund/issues" target="_blank" rel="noopener noreferrer"
                     class="hover:text-white transition-colors">Issues</a></li>
-                <li><a href="https://github.com/lucodifier/dashund/discussions" target="_blank"
+                <li><a href="https://github.com/lucodifier/dachshund/discussions" target="_blank"
                     rel="noopener noreferrer" class="hover:text-white transition-colors">Discussões</a></li>
                 <li><a href="https://www.npmjs.com/package/@dachshund_framework/core" target="_blank" rel="noopener noreferrer"
                     class="hover:text-white transition-colors">NPM Package</a></li>
@@ -2553,7 +2553,7 @@ vercel --prod
       </footer>
     </div>
   </div>
-  <script type="module" src="http://localhost:5173/src/index.js"></script>
+  
 
 
 
