--- a/index.html
+++ b/index.html
@@ -1896,6 +1896,8 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Por quê?</a><a
               href="#docs"
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Exemplos</a><a
+              id="docs-link" href="http://localhost:5174/"
+              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Documentação</a><a
               href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">GitHub</a><a
               href="#start"
@@ -2468,7 +2470,12 @@ vercel --prod
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
                   </path>
-                </svg>Documentação</a><a href="https://github.com/lucodifier/dachshund/issues" target="_blank"
+                </svg>Documentação</a><a href="http://localhost:5174/" id="docs-footer-top-link"
+                class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
+                  fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
+                </svg>Docs (local)</a><a href="https://github.com/lucodifier/dachshund/issues" target="_blank"
                 rel="noopener noreferrer"
                 class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
                   fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -2506,6 +2513,7 @@ vercel --prod
                 </li>
                 <li><a href="#why" class="hover:text-white transition-colors">Por quê?</a></li>
                 <li><a href="#docs" class="hover:text-white transition-colors">Exemplos</a></li>
+                <li><a id="docs-footer-link" href="http://localhost:5174/" class="hover:text-white transition-colors">Documentação</a></li>
                 <li><a href="#start" class="hover:text-white transition-colors">Começar</a></li>
               </ul>
             </div>
