--- a/index.html
+++ b/index.html
@@ -2162,11 +2162,11 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
               <h2 class="text-4xl md:text-5xl font-bold mb-4">💻 Super Simples de Usar</h2>
               <p class="text-xl text-gray-300">Veja como é fácil criar um site React com SEO perfeito</p>
             </div>
-            <div class="flex flex-wrap gap-2 mb-6 justify-center"><button
+            <div class="flex flex-wrap gap-2 mb-6 justify-center"><button data-snippet="setup"
                 class="px-6 py-3 rounded-lg font-semibold transition-all duration-300 bg-gray-800 text-gray-300 hover:bg-gray-700">Setup
-                Básico</button><button
+                Básico</button><button data-snippet="component"
                 class="px-6 py-3 rounded-lg font-semibold transition-all duration-300 bg-gray-800 text-gray-300 hover:bg-gray-700">Componente
-                com SEO</button><button
+                com SEO</button><button data-snippet="build"
                 class="px-6 py-3 rounded-lg font-semibold transition-all duration-300 bg-gradient-to-r from-primary-600 to-accent-600 text-white shadow-lg">Build
                 para Produção</button></div>
             <div class="relative">
@@ -2177,14 +2177,13 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                       d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z">
                     </path>
                   </svg><span>Copiar</span></button></div>
-              <div class="bg-gray-950 rounded-xl p-6 overflow-x-auto shadow-2xl border border-gray-800">
+              <div id="snippet-container" class="bg-gray-950 rounded-xl p-6 overflow-x-auto shadow-2xl border border-gray-800">
                 <div class="flex items-center space-x-2 mb-4 pb-4 border-b border-gray-800">
                   <div class="w-3 h-3 rounded-full bg-red-500"></div>
-                  <div class="w-3 h-3 rounded-full bg-yellow-500"></div>
-                  <div class="w-3 h-3 rounded-full bg-green-500"></div><span
+                  <div class="w-3 h-3 rounded-full bg-green-500"></div><span id="snippet-label"
                     class="ml-4 text-gray-400 text-sm font-mono">Build para Produção.bash</span>
                 </div>
-                <pre class="text-sm md:text-base"><code class="font-mono text-gray-100 whitespace-pre"># Criar projeto
+                <pre class="text-sm md:text-base"><code id="snippet-code" class="font-mono text-gray-100 whitespace-pre"># Criar projeto
                 npx dachshund create meu-projeto
 
 # Desenvolver
@@ -2614,6 +2613,42 @@ vercel --prod
       } catch (e) {
         console.error('Falha ao copiar', e);
       }
+    }, { passive: true });
+
+    const snippets = {
+      setup: {
+        label: 'Setup Básico.bash',
+        code: `# Instalar/Inicializar\nnpx dachshund create meu-projeto\ncd meu-projeto\nnpm install\n\n# Rodar dev\nnpm run dev`,
+      },
+      component: {
+        label: 'Componente com SEO.jsx',
+        code: `import { useSEO } from '@dachshund_framework/core'\n\nexport default function Home() {\n  useSEO({ title: 'Home', description: 'Minha página com SEO perfeito' })\n  return <h1>Hello Dachshund</h1>\n}`,
+      },
+      build: {
+        label: 'Build para Produção.bash',
+        code: `# Criar projeto\nnpx dachshund create meu-projeto\n\n# Desenvolver\nnpm run dev\n\n# Build com SEO automático\nnpm run build\n\n# Resultado:\n# dist/\n# ├── index.html        ← SEO completo\n# ├── blog/\n# │   ├── index.html    ← SEO da listagem\n# │   └── 1/index.html  ← SEO do post 1\n# └── assets/\n#     ├── bundle.js\n#     └── styles.css\n\n# Deploy (escolha um):\nnetlify deploy --dir=dist\nvercel --prod\n# ou arraste para Cloudflare Pages`,
+      },
+    };
+
+    document.addEventListener('click', (ev) => {
+      const btn = ev.target.closest('button[data-snippet]');
+      if (!btn) return;
+      const key = btn.getAttribute('data-snippet');
+      const s = snippets[key];
+      if (!s) return;
+      const labelEl = document.getElementById('snippet-label');
+      const codeEl = document.getElementById('snippet-code');
+      if (!labelEl || !codeEl) return;
+      labelEl.textContent = s.label;
+      codeEl.textContent = s.code;
+
+      // active styles
+      document.querySelectorAll('button[data-snippet]').forEach(b => {
+        b.classList.remove('bg-gradient-to-r', 'from-primary-600', 'to-accent-600', 'text-white', 'shadow-lg');
+        b.classList.add('bg-gray-800', 'text-gray-300');
+      });
+      btn.classList.remove('bg-gray-800', 'text-gray-300');
+      btn.classList.add('bg-gradient-to-r', 'from-primary-600', 'to-accent-600', 'text-white', 'shadow-lg');
     }, { passive: true });
   })();
 </script>
