--- a/index.html
+++ b/index.html
@@ -1885,20 +1885,16 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
     <div class="min-h-screen flex flex-col">
       <header class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 bg-transparent py-5">
         <nav class="container mx-auto px-4 md:px-6 flex items-center justify-between">
-          <div class="flex items-center space-x-3"><img
-              src="./assets/dashund_logo.png"
-              alt="Dachshund Logo" class="h-10 w-10"><span
+          <div class="flex items-center space-x-3"><img src="./assets/dashund_logo.png" alt="Dachshund Logo"
+              class="h-10 w-10"><span
               class="text-2xl font-bold bg-gradient-to-r from-primary-600 to-accent-600 bg-clip-text text-transparent">Dachshund</span>
           </div>
           <div class="hidden md:flex items-center space-x-8"><a href="#features"
-              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Features</a><a
-              href="#why"
-              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Por quê?</a><a
-              href="#docs"
+              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Features</a><a href="#why"
+              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Por quê?</a><a href="#docs"
               class="text-gray-700 hover:text-primary-600 transition-colors font-medium">Exemplos</a><a
               href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
-              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">GitHub</a><a
-              href="#start"
+              class="text-gray-700 hover:text-primary-600 transition-colors font-medium">GitHub</a><a href="#start"
               class="bg-gradient-to-r from-primary-600 to-accent-600 hover:from-primary-700 hover:to-accent-700 text-white px-6 py-2 rounded-lg transition-all duration-300 font-semibold shadow-md hover:shadow-lg transform hover:-translate-y-0.5">Começar</a>
           </div><button class="md:hidden text-gray-900 hover:text-primary-600 transition-colors"><svg class="w-6 h-6"
               fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1920,7 +1916,10 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
               <div class="flex-1 text-center lg:text-left max-w-2xl">
                 <div
                   class="inline-flex items-center bg-white px-4 py-2 rounded-full shadow-md mb-6 border border-orange-200">
-                  <a href="https://www.npmjs.com/package/@dachshund_framework/core" target="_blank" rel="noopener noreferrer" class="text-orange-600 font-semibold text-sm">🐕 Versão 1.1.0 disponível no NPM!</a></div>
+                  <a href="https://www.npmjs.com/package/@dachshund_framework/core" target="_blank"
+                    rel="noopener noreferrer" class="text-orange-600 font-semibold text-sm">🐕 Versão 1.1.0 disponível
+                    no NPM!</a>
+                </div>
                 <h1 class="text-5xl md:text-6xl lg:text-7xl font-bold text-gray-900 mb-6 leading-tight">O doguinho que
                   corre atrás do <span class="text-orange-600 relative inline-block">SEO<svg
                       class="absolute -bottom-2 left-0 w-full h-3" viewBox="0 0 200 12" fill="none">
@@ -1962,9 +1961,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
               <div class="flex-1 flex justify-center lg:justify-end">
                 <div class="relative">
                   <div class="absolute inset-0 bg-orange-500 rounded-full filter blur-3xl opacity-20 animate-pulse">
-                  </div><img
-                    src="./assets/dashund_logo.png"
-                    alt="Dachshund - Framework React com SEO"
+                  </div><img src="./assets/dashund_logo.png" alt="Dachshund - Framework React com SEO"
                     class="relative w-64 h-64 md:w-80 md:h-80 lg:w-96 lg:h-96 object-contain drop-shadow-2xl"
                     style="animation: 3s ease-in-out 0s infinite normal none running float;">
                 </div>
@@ -1972,8 +1969,8 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
             </div>
             <div class="mt-16 max-w-2xl mx-auto lg:mx-0">
               <div class="bg-gray-900 text-gray-100 p-6 rounded-xl shadow-2xl flex items-center justify-between"><code
-                  class="flex-1 font-mono text-sm md:text-base">npx dachshund create meu-projeto</code><button
-                  data-copy class="ml-4 text-orange-400 hover:text-orange-300 transition-colors flex-shrink-0"
+                  class="flex-1 font-mono text-sm md:text-base">npx dachshund create meu-projeto</code><button data-copy
+                  class="ml-4 text-orange-400 hover:text-orange-300 transition-colors flex-shrink-0"
                   title="Copiar comando"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z">
@@ -2177,7 +2174,8 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                       d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z">
                     </path>
                   </svg><span>Copiar</span></button></div>
-              <div id="snippet-container" class="bg-gray-950 rounded-xl p-6 overflow-x-auto shadow-2xl border border-gray-800">
+              <div id="snippet-container"
+                class="bg-gray-950 rounded-xl p-6 overflow-x-auto shadow-2xl border border-gray-800">
                 <div class="flex items-center space-x-2 mb-4 pb-4 border-b border-gray-800">
                   <div class="w-3 h-3 rounded-full bg-red-500"></div>
                   <div class="w-3 h-3 rounded-full bg-green-500"></div><span id="snippet-label"
@@ -2275,7 +2273,8 @@ vercel --prod
                 <div class="text-6xl mb-4">🚀</div>
                 <h3 class="text-2xl font-bold text-gray-900 mb-4">Mais Templates em Breve</h3>
                 <p class="text-gray-600 mb-6">Estamos trabalhando em mais templates incríveis:</p>
-                <ul class="space-y-2 text-gray-700 text-left"></ul><a href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
+                <ul class="space-y-2 text-gray-700 text-left"></ul><a href="https://github.com/lucodifier/dachshund"
+                  target="_blank" rel="noopener noreferrer"
                   class="mt-6 text-primary-600 hover:text-primary-700 font-semibold inline-flex items-center">Contribua
                   no GitHub<svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -2328,7 +2327,8 @@ vercel --prod
                   <tr class="bg-gradient-to-r from-primary-600 to-accent-600 text-white">
                     <th class="px-4 md:px-6 py-4 text-left font-bold">Feature</th>
                     <th class="px-4 md:px-6 py-4 text-center font-bold">
-                      <div class="flex flex-col items-center"><span class="text-2xl mb-1">🐕</span><span>Dachshund</span>
+                      <div class="flex flex-col items-center"><span
+                          class="text-2xl mb-1">🐕</span><span>Dachshund</span>
                       </div>
                     </th>
                     <th class="px-4 md:px-6 py-4 text-center font-bold hidden md:table-cell">Next.js</th>
@@ -2450,8 +2450,8 @@ vercel --prod
                       <path
                         d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.385-1.335-1.755-1.335-1.755-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 21.795 24 17.295 24 12c0-6.63-5.37-12-12-12">
                       </path>
-                    </svg>Ver no GitHub</a><a href="https://www.npmjs.com/package/@dachshund_framework/core" target="_blank"
-                    rel="noopener noreferrer"
+                    </svg>Ver no GitHub</a><a href="https://www.npmjs.com/package/@dachshund_framework/core"
+                    target="_blank" rel="noopener noreferrer"
                     class="bg-gray-900 hover:bg-gray-800 text-white font-bold py-4 px-8 rounded-lg transition-all duration-300 shadow-lg hover:shadow-xl inline-flex items-center justify-center"><svg
                       class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                       <path
@@ -2460,20 +2460,8 @@ vercel --prod
                     </svg>Ver no NPM</a></div>
               </div>
             </div>
-            <div class="mt-12 flex flex-wrap justify-center gap-6 text-sm"><a
-                href="https://github.com/lucodifier/dachshund" target="_blank" rel="noopener noreferrer"
-                class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
-                  fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
-                  </path>
-                </svg>Documentação</a><a href="http://localhost:5174/" id="docs-footer-top-link"
-                class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
-                  fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
-                </svg>Docs (local)</a><a href="https://github.com/lucodifier/dachshund/issues" target="_blank"
-                rel="noopener noreferrer"
+            <div class="mt-12 flex flex-wrap justify-center gap-6 text-sm">
+              <a href="https://github.com/lucodifier/dachshund/issues" target="_blank" rel="noopener noreferrer"
                 class="text-orange-100 hover:text-white transition-colors flex items-center"><svg class="w-4 h-4 mr-1"
                   fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -2485,7 +2473,8 @@ vercel --prod
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z">
                   </path>
-                </svg>Discussões</a></div>
+                </svg>Discussões</a>
+            </div>
           </div>
         </section>
       </main>
@@ -2493,9 +2482,8 @@ vercel --prod
         <div class="container mx-auto px-4 md:px-6">
           <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-8 mb-8">
             <div>
-              <div class="flex items-center space-x-3 mb-4"><img
-                  src="./assets/dashund_logo.png"
-                  alt="Dachshund Logo" class="h-10 w-10">
+              <div class="flex items-center space-x-3 mb-4"><img src="./assets/dashund_logo.png" alt="Dachshund Logo"
+                  class="h-10 w-10">
                 <h3
                   class="text-2xl font-bold bg-gradient-to-r from-primary-500 to-accent-500 bg-clip-text text-transparent">
                   Dachshund</h3>
@@ -2520,8 +2508,8 @@ vercel --prod
                     class="hover:text-white transition-colors">Issues</a></li>
                 <li><a href="https://github.com/lucodifier/dachshund/discussions" target="_blank"
                     rel="noopener noreferrer" class="hover:text-white transition-colors">Discussões</a></li>
-                <li><a href="https://www.npmjs.com/package/@dachshund_framework/core" target="_blank" rel="noopener noreferrer"
-                    class="hover:text-white transition-colors">NPM Package</a></li>
+                <li><a href="https://www.npmjs.com/package/@dachshund_framework/core" target="_blank"
+                    rel="noopener noreferrer" class="hover:text-white transition-colors">NPM Package</a></li>
               </ul>
             </div>
             <div>
@@ -2555,7 +2543,7 @@ vercel --prod
       </footer>
     </div>
   </div>
-  
+
 
 
 
