Update link in index.html to use relative URL for navigation

--- a/index.html
+++ b/index.html
@@ -1930,7 +1930,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                     class="text-orange-600">ultra-leve (~5kb)</strong> com SEO perfeito, sem necessidade de SSR
                   (Server-Side Rendering).</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start mb-8"><a
-                    href="http://localhost:5173/#start"
+                    href="#start"
                     class="inline-flex items-center justify-center bg-orange-600 hover:bg-orange-700 text-white font-bold py-4 px-8 rounded-lg transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-0.5"><svg
                       class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
